--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,6 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": false,
-    "noEmit": true,
-    "outDir": ".homeybuild/",
-    "target": "ES2019",
-    "module": "CommonJS"
-  },
-  "include": [
-    "**/*.js",
-    "**/*.jsx",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    ".homeybuild",
-    "dist"
-  ]
+    "outDir": ".homeybuild/"
+  }
 }
