--- a/app.json
+++ b/app.json
@@ -7882,6 +7882,18 @@
       },
       "class": "sensor",
       "capabilities": [],
+      "capabilitiesOptions": {
+        "meter_rank_price_h0_next_8h": {
+          "units": {
+            "en": "/32"
+          }
+        },
+        "meter_rank_price_h0_this_day": {
+          "units": {
+            "en": "/96"
+          }
+        }
+      },
       "platforms": [
         "local"
       ],
